--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -30,6 +30,8 @@ environment:
 dependencies:
   flutter:
     sdk: flutter
+  flutter_localizations:
+    sdk: flutter
 
 
   # The following adds the Cupertino Icons font to your application.
@@ -37,6 +39,8 @@ dependencies:
   cupertino_icons: ^1.0.8
   dio: ^5.7.0
   go_router: ^14.3.0
+  intl: any
+  calendar_date_picker2: ^1.1.8
 
 dev_dependencies:
   flutter_test:
