--- a/.vscode/launch.json
+++ b/.vscode/launch.json
@@ -5,14 +5,14 @@
   "version": "0.2.0",
   "configurations": [
     {
-      "name": "Flutter Web",
+      "name": "Flutter Web Edge",
       "request": "launch",
       "type": "dart",
       "flutterMode": "debug",
       "program": "lib/main.dart",
       "args": [
         "-d",
-        "chrome"
+        "edge"
       ]
     },
     {
