--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -20,6 +20,7 @@ dependencies:
   calendar_date_picker2: ^1.1.8
   shimmer: ^3.0.0
   collection: ^1.19.1
+  provider: ^6.1.5
 
 dev_dependencies:
   flutter_test:
