Add environment configuration support: Create .env, .env-local, and .env-prd files for base URL management. Integrate flutter_dotenv package for environment variable loading in main.dart. Refactor HTTP services to utilize dynamic base URL from configuration. Add set_env.sh script for environment setup.

--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -21,6 +21,7 @@ dependencies:
   shimmer: ^3.0.0
   collection: ^1.19.1
   provider: ^6.1.5
+  flutter_dotenv: ^5.1.0
 
 dev_dependencies:
   flutter_test:
@@ -32,6 +33,7 @@ flutter:
   uses-material-design: true
 
   assets:
+    - .env
     - assets/images/
     - assets/icons/
   # fonts:
