--- a/.github/workflows/release-flutter-windows.yml
+++ b/.github/workflows/release-flutter-windows.yml
@@ -50,7 +50,7 @@ jobs:
         run: |
           flutter clean
           flutter pub get
-          dart run msix:create          
+          flutter pub run msix:create          
           New-Item -ItemType Directory -Force -Path build\release | Out-Null
           Copy-Item build\msix\*.msix build\release\WorkshopApp.msix
           Copy-Item build\msix\*.appinstaller build\release\WorkshopApp.appinstaller
