--- a/msix_config.yaml
+++ b/msix_config.yaml
@@ -11,6 +11,7 @@ output_path: build/msix
 sign_msix: true
 certificate_path: windows/signing/workshop-code-signing.pfx
 certificate_password: ${CERT_PASSWORD}
+install_certificate: false
 
 # Auto-update (Windows App Installer)
 app_installer:
