--- a/msix_config.yaml
+++ b/msix_config.yaml
@@ -1,5 +1,5 @@
 display_name: Workshop App
-publisher_display_name: unspoken-tech-org
+publisher_display_name: CN=Unspoken Tech Org
 identity_name: com.workshop.app
 
 # Será sobrescrito no CI (a partir do pubspec), mas deixe um valor inicial:
@@ -12,6 +12,7 @@ sign_msix: true
 certificate_path: windows/signing/workshop-code-signing.pfx
 certificate_password: ${CERT_PASSWORD}
 install_certificate: false
+publisher: CN=Unspoken Tech Org
 
 # Auto-update (Windows App Installer)
 app_installer:
