--- a/.github/workflows/release-flutter-windows.yml
+++ b/.github/workflows/release-flutter-windows.yml
@@ -52,18 +52,18 @@ jobs:
           if (-not (Test-Path $pfxPath)) { throw "PFX não restaurado em $pfxPath" }
           if ([string]::IsNullOrWhiteSpace($env:CERT_PASSWORD)) { throw "CERT_PASSWORD não definido nos Secrets" }
       
-          # Tenta abrir o PFX COM a senha -> falha aqui se a senha estiver errada
           Add-Type -AssemblyName System.Security
-          $bytes  = [IO.File]::ReadAllBytes($pfxPath)
-          $secure = ConvertTo-SecureString -String $env:CERT_PASSWORD -AsPlainText -Force
-          $cert   = New-Object System.Security.Cryptography.X509Certificates.X509Certificate2
-          $cert.Import($bytes, $secure, [System.Security.Cryptography.X509Certificates.X509KeyStorageFlags]::Exportable)
-      
+          $bytes = [IO.File]::ReadAllBytes($pfxPath)
+
+          $flags = [System.Security.Cryptography.X509Certificates.X509KeyStorageFlags]::Exportable `
+                -bor [System.Security.Cryptography.X509Certificates.X509KeyStorageFlags]::EphemeralKeySet
+          $cert  = [System.Security.Cryptography.X509Certificates.X509Certificate2]::new($bytes, $env:CERT_PASSWORD, $flags)
+
           $subject = $cert.Subject  # ex.: "CN=Unspoken Tech Org"
-          if (-not $subject) { throw "Subject do certificado vazio" }
+          if ([string]::IsNullOrWhiteSpace($subject)) { throw "Subject do certificado vazio" }
           Write-Host "PFX OK. Subject: $subject"
-      
-          # injeta 'publisher:' no msix_config.yaml para bater com o PFX
+
+          # injeta 'publisher:' no msix_config.yaml para bater com o Subject do PFX
           $yaml = Get-Content -Raw msix_config.yaml
           if ($yaml -notmatch "(?m)^\s*publisher:\s*") {
             $yaml = $yaml.TrimEnd() + "`r`npublisher: $subject`r`n"
