--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -22,7 +22,9 @@ dependencies:
   collection: ^1.19.1
   provider: ^6.1.5
   flutter_dotenv: ^5.1.0
-  msix: ^3.16.12
+  auto_updater: ^1.0.0
+  # msix: ^3.16.12
+  
 
 dev_dependencies:
   flutter_test:
