--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -2,7 +2,7 @@ name: flutter_workshop_front
 description: "Flutter Workshop Frontend"
 publish_to: 'none'
 
-version: 1.0.0+1
+version: 1.0.0
 
 environment:
   sdk: ^3.5.3
@@ -22,6 +22,8 @@ dependencies:
   collection: ^1.19.1
   provider: ^6.1.5
   flutter_dotenv: ^5.1.0
+  auto_updater: ^1.0.0
+
 
 dev_dependencies:
   flutter_test:
@@ -35,6 +37,5 @@ flutter:
   assets:
     - .env
     - assets/images/
-    - assets/icons/
   # fonts:
 
