update deploy to copy env-prd to .env

--- a/.github/workflows/release-flutter-windows.yml
+++ b/.github/workflows/release-flutter-windows.yml
@@ -30,6 +30,10 @@ jobs:
       - name: Flutter pub get
         run: flutter pub get
 
+      - name: Change .env to production
+        run: |
+          cp .env-prd .env
+
       - name: Build Flutter Windows (release)
         run: flutter build windows --release
 
