--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -23,6 +23,11 @@ dependencies:
   provider: ^6.1.5
   flutter_dotenv: ^5.1.0
   auto_updater: ^1.0.0
+  flutter_secure_storage: ^10.0.0
+  package_info_plus: ^9.0.0
+  device_info_plus: ^12.3.0
+  jwt_decoder: ^2.0.1
+  uuid: ^4.5.2
 
 
 dev_dependencies:
